--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://goitstudentsworks.github.io/node_fs98_front_dmeshkovGit/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
